--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,12 @@
   </head>
 
   <body>
+    <%= render "layouts/header" %>
+    <div class="body">
+      <div class="container">
     <%= yield %>
+    </div>
+  </div>
+  <%= render "layouts/footer" %>
   </body>
 </html>
