ジャンル機能追加

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,7 +5,12 @@
 		</nav>
 	  	<nav>
 			<ul class="nav navbar-nav navbar-right">
-				<% if customer_signed_in? %>
+				<% if admin_signed_in? %>
+					<li><%= link_to "ジャンル", admins_genres_path %></li>
+					<li><%= link_to "話題一覧", admins_topicks_path %></li>
+					<li><%= link_to "会員一覧",admins_customers_path %></li>
+					<li><%= link_to "ログアウト",destroy_admin_session_path,method: :delete %></li>
+				<% elsif customer_signed_in? %>
 					<li><%= link_to "ジャンル", genres_path %>
 					</li>
 					<li><%= link_to "話題", topicks_path %></li>
