--- a/app/views/admins/genres/index.html.erb
+++ b/app/views/admins/genres/index.html.erb
@@ -1,5 +1,24 @@
-<h1>Admins::Genres#index</h1>
-<p>Find me in app/views/admins/genres/index.html.erb</p>
- <%= link_to " logout", destroy_customer_session_path, method: :delete, class:"glyphicon glyphicon-log-out logout head_item" %>
+<h1>管理者　ジャンル一覧ページ</h1>
+	<%= form_for(@genre,url:admins_genres_path) do |f| %>
+		<%= f.text_field :genre_name %>
+		<%= f.submit "追加" ,class:"btn btn-info" %>
+	<% end %>
 
- 管理者
+
+	<h1>ジャンル一覧</h1>
+	<table class="table table-bordered">
+		<thead>
+			<tr>
+				<th>ジャンル</th>
+				<th></th>
+			</tr>
+		</thead>
+		<tbody>
+			<% @genres.each do |genre| %>
+			<tr>
+				<td><%= genre.genre_name %></td>
+				<td><%= link_to "編集する", edit_genre_path(genre) %></td>
+			</tr>
+			<% end %>
+		</tbody>
+	</table>
