--- a/app/views/genres/index.html.erb
+++ b/app/views/genres/index.html.erb
@@ -1,2 +1,17 @@
-<h1>Genres#index</h1>
-<p>Find me in app/views/genres/index.html.erb</p>
+<h1>ジャンル一覧</h1>
+<table class="table table-bordered">
+	<thead>
+		<tr>
+			<th>ジャンル</th>
+			<th>話題数</th>
+		</tr>
+	</thead>
+	<tbody>
+		<% @genres.each do |genre| %>
+		<tr>
+			<td><%= genre.genre_name %></td>
+			<td><%= link_to genre.topicks.count, topicks_path %></td>
+		</tr>
+		<% end %>
+	</tbody>
+</table>
