--- a/app/views/admins/topicks/show.html.erb
+++ b/app/views/admins/topicks/show.html.erb
@@ -1,2 +1,3 @@
-<h1>Admins::Topicks#show</h1>
-<p>Find me in app/views/admins/topicks/show.html.erb</p>
+<h1>話題詳細</h1>
+<%= @topick.topick_name %>
+
