--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,7 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
 	<div class="container">
 		<nav class="nav navbar-nav nabbar-right">
-			<span>SukiSp</span>
+			<span><%=link_to "SukiSp",root_path %></span>
 		</nav>
 	  	<nav>
 			<ul class="nav navbar-nav navbar-right">
