--- a/app/views/customers/edit.html.erb
+++ b/app/views/customers/edit.html.erb
@@ -1,2 +1,7 @@
-<h1>Customers#edit</h1>
-<p>Find me in app/views/customers/edit.html.erb</p>
+<h1>プロフィール編集</h1>
+	<%= form_for(@customer) do |f| %>
+		<%= f.attachment_field :profile_image %>
+		<%= f.text_field :name %>
+		<%= f.text_field :public_name %>
+		<%= f.submit "更新" %>
+		<% end %>
