--- a/app/views/genres/index.html.erb
+++ b/app/views/genres/index.html.erb
@@ -10,7 +10,7 @@
 		<% @genres.each do |genre| %>
 		<tr>
 			<td><%= genre.genre_name %></td>
-			<td><%= link_to genre.topicks.count, topicks_path %></td>
+			<td><%= link_to genre.topicks.count, topicks_path(genre_id: genre.id) %></td>
 		</tr>
 		<% end %>
 	</tbody>
