--- a/app/views/topicks/edit.html.erb
+++ b/app/views/topicks/edit.html.erb
@@ -1,7 +1,12 @@
-<h1>Topicks#edit</h1>
-<p>Find me in app/views/topicks/edit.html.erb</p>
-<%= @topick.topick_name %>
-<% @topick.topick_images.each do |image| %>
-<%= attachment_image_tag image,:topick_image, :fill, 50,50, format: "jpeg" %>
+<h1>話題編集ページ</h1>
+<%= form_for @topick, url: topick_path  do |f| %>
+	<%= f.collection_select(:genre_id, Genre.all, :id, :genre_name) %><br>
+	<%= f.attachment_field :topick_images_topick_images, multiple: true %>
+	<%= f.label :題名 %>
+	<%= f.text_field :topick_name %><br>
+	<%= f.label :内容 %>
+	<%= f.text_area :introduction %><br>
+	<%= f.submit "更新" %>
 <% end %>
-<%= link_to "消去",topick_path(@topick), method: :delete %>
+	<%= attachment_image_tag @toppick,:topick_image, :fill, 50,50, format: "jpeg" %>
+	<%= link_to "消去",topick_path(@topick), method: :delete %>
