いいね機能実装

--- a/app/views/topicks/show.html.erb
+++ b/app/views/topicks/show.html.erb
@@ -7,6 +7,8 @@
 <% end %><br>
 <p>内容
 <%= @topick.introduction %></p>
+
+<%= render "topicks/topick_like", topick: @topick %>
 <% if @topick.customer == current_customer %>
 	<%= link_to "編集する", edit_topick_path(@topick), class:"btn btn-info" %>
 	<% else %>
@@ -14,22 +16,13 @@
 
 	<h3>コメント一覧</h3>
 
-<div>
-	<% @topick.comments.each do |comment| %>
-	<%= comment.customer.public_name %>
-	<%= attachment_image_tag comment, :image, :fill, 50,50, format: "jpeg" %>
-	<%= comment.comment %>
-	<%= comment.created_at %>
-
-	<% if comment.customer == current_customer %>
-		<%= link_to "削除", topick_comment_path(comment.topick_id, comment.id), method: :delete %>
-		<% end %>
-	<% end %>
+<div id="js-comments">
+	<%= render "topicks/topick_comment", topick_comment: @topick.comments %>
 </div>
 
 <h3>コメント投稿</h3>
 <div>
-	<%= form_for [@topick, @comment] do |f| %>
+	<%= form_with(model:[@topick, @comment]) do |f| %>
 		<%= f.attachment_field :image %>
 		<%= f.text_area :comment %>
 		<%= f.submit "コメント投稿", class:"btn btn-info" %>
