--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,6 +2,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-xs-3 col-xs-offset-9">
+				<%= link_to "お問い合わせ",new_inquiry_path %>
 				<p>CopyRight SkiSp</p>
 			</div>
 		</div>
