--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,4 +2,5 @@
 				<p>
 				<%= link_to "お問い合わせ",new_inquiry_path ,:style=>"color:#000;"%></p>
 				<p>CopyRight SkiSp</p>
+				<%= link_to "Powered by News API","https://newsapi.org" %>
 </footer>
