--- a/app/views/topicks/show.html.erb
+++ b/app/views/topicks/show.html.erb
@@ -5,12 +5,17 @@
 <%= attachment_image_tag image, :topick_image, :fill, 250,150, format: "jpeg" %>
 <% end %>
 </div><br>
+<div>
+	<%= @topick.customer.public_name %>
+</div>
 <div class="well"style="background-color: #fff">
 <%= @topick.introduction %></p>
 </div>
 <div class="text-right">
 	<span>閲覧数:<%= @topick.impressionist_count %></span>
+	<% if customer_signed_in? %>
 <%= render "topicks/topick_like", topick: @topick %>
+<% end %>
 
 </div>
 <div class="text-center"><% if @topick.customer == current_customer %>
