--- a/app/views/admins/topicks/show.html.erb
+++ b/app/views/admins/topicks/show.html.erb
@@ -1,3 +1,24 @@
-<h1>話題詳細</h1>
-<%= @topick.topick_name %>
+<h1>管理画面話題詳細</h1>
+<div class="text-center">
+<h2 style="text-decoration: underline;"><%= @topick.topick_name %></h2>
+
+<% @topick.topick_images.each do |image| %>
+<%= attachment_image_tag image, :topick_image, :fill, 250,150, format: "jpeg" %>
+<% end %>
+</div><br>
+<div class="text-center">
+<%= @topick.customer.public_name %>
+</div>
+<div class="well"style="background-color: #fff">
+<%= @topick.introduction %></p>
+</div>
+<div class="text-right">
+	<span>閲覧数:<%= @topick.impressionist_count %></span>
+
+</div>
+<div class="text-center">
+	<%= link_to "編集する", edit_admins_topick_path(@topick), class:"btn btn-info" %>
+	 <%= link_to "消去する",admins_topick_path(@topick), method: :delete,class:"btn btn-danger","data-confirm"=>"本当に消しますか?" %>
+</div>
+
 
