--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,14 +13,26 @@
  *= require_tree .
  *= require_self
  */
+
+
+//font-family: 'Roboto Mono', ;
+//font-family: 'Simonetta', ;
+//font-family: 'Playfair Display', ;
+//font-family: 'Kosugi', ;
+//font-family: 'Noto Serif JP', ;
+
 @import "bootstrap-sprockets";
 @import "bootstrap";
 html{
 	min-height:100%;
 	position:relative;
 }
+
+.font {
+	font-family: "Roboto Mono", sans-serif;
+}
 body{
-	margin-top: 100px;
+	margin-top: 110px;
 	height:100%;
 	margin-bottom:6em;
 }
@@ -40,6 +52,9 @@ footer {
 	min-height:100%;
 }
 
+.edit-box {
+	margin-top:10px;
+}
 .actions {
 	margin-top:10px;
 	margin-bottom:5px;
@@ -72,7 +87,7 @@ footer {
 .news {
 	height: 300px;
 	width: 100%;
-	border:2px solid #000;
+	border:2px solid #7fffd4;
 }
 
 .news-line {
@@ -116,6 +131,19 @@ background-image: image-url("/img/image4.jpg");
 
 .toph1 {
 	padding:10px 0 0 10px;
+	font-family: "Noto Serif JP", sans-serif;
+}
+.toph2 {
+	padding:10px 0 0 10px;
+	font-family: "Noto Serif JP", sans-serif;
+}
+.toph3 {
+	font-size:35px;
+	padding:10px 0 0 10px;
+	font-family: "Simonetta", sans-serif;
+}
+.toph4 {
+	font-family: "Noto serif JP", sans-serif;
 }
 
 .admin-contact {
@@ -130,12 +158,18 @@ background-image: image-url("/img/image4.jpg");
 
 .mini-genre{
 	margin-left:200px;
-}
-
-.topick-box {
-	border-bottom: 2px solid #000;
 
 }
+
+.main {
+	font-size:25px;
+}
+
+.main-font {
+	background: linear-gradient(#7fffd4,#456);
+}
+
+
 
 .topick-index {
 	border-bottom:10px solid #7fffd4;
