--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,8 @@
     <%= stylesheet_link_tag "https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"%>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+     <link href="https://fonts.googleapis.com/css?family=Playfair+Display|Roboto+Mono|Simonetta&display=swap" rel="stylesheet">
+     <link href="https://fonts.googleapis.com/css?family=Kosugi|Noto+Serif+JP&display=swap&subset=cyrillic,japanese" rel="stylesheet"> 
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <script type="text/javascript" src="//code.jquery.com/jquery-2.1.0.min.js"></script>
   </head>
