--- a/app/views/topicks/about.html.erb
+++ b/app/views/topicks/about.html.erb
@@ -1,1 +1,15 @@
-<%= image_tag "img/main2.jpg",:size =>"320x280" %>
+<div class="row">
+	<div class="col-xs-4">
+<%= image_tag "img/lake.jpg",:size =>"390x190" %>
+</div>
+<div class="col-xs-8">
+<div class="well">
+	<p><b>1.Sukisp</b>は自身のお話を自由に投稿できるサイトです。</p>
+	<p>2.興味のあるジャンルからあなたの話題を閲覧できます。</p>
+	<p>3.news apiからヘッドラインニュースを見ることが可能です。</p>
+	<p>4.会員登録をされた方はご自身の話題を投稿することが出来ます。</p>
+	<p>5.また、他の会員の方へのコメントも出来るようになります。</p>
+</div>
+</div>
+	<h2>是非、あなたのお話をお聞かせ下さい。</h2>
+</div>
