--- a/app/views/admins/genres/edit.html.erb
+++ b/app/views/admins/genres/edit.html.erb
@@ -1,5 +1,12 @@
 <div class="container">
 	<h1>ジャンル編集画面</h1>
+	<% if @genre.errors.any? %>
+		<h2 class="text-danger"><%= @genre.errors.count %>つのエラー</h2>
+			<ul class="text-danger">
+				<% @genre.errors.full_messages.each do |message|%>
+				<li><%= message %></li>
+				<%end%>
+			<%end%></ul>
 	<%= form_for(@genre,url:"/admins/genres/#{@genre.id}") do |f|%>
 	<b>ジャンル</b>
 	<%= f.text_field :genre_name %>
