--- a/app/views/customers/withdraw.html.erb
+++ b/app/views/customers/withdraw.html.erb
@@ -1,5 +1,5 @@
 <div class="withdraw text-center">
-<h2 style="text-decoration: underline;"><%= link_to "退会する", customers_path(@customer), method: :delete ,"data-confirm"=>"本当に退会されますか?"%></h2>
+<h2 style="text-decoration: underline;"><%= link_to "退会する", customer_path(@customer), method: :delete ,"data-confirm"=>"本当に退会されますか?"%></h2>
 <h3>退会されるとこれまで上げてきた話題が消えてしまいます。<br>
 	退会される際はご了承下さい</h3>
 </div>
