--- a/app/views/topicks/edit.html.erb
+++ b/app/views/topicks/edit.html.erb
@@ -1,5 +1,12 @@
 <div class="text-center well" style="background-color: #fff">
-	<h1 style="color: #01b8be">話題新規作成</h1>
+	<h1 style="color: #01b8be">話題編集</h1>
+	<% if @topick.errors.any? %>
+		<h2 class="text-danger"><%= @topick.errors.count %>つのエラー</h2>
+			<ul class="text-danger">
+				<% @topick.errors.full_messages.each do |message|%>
+				<li><%= message %></li>
+				<%end%>
+			<%end%></ul>
 			<%= form_for @topick, url: topick_path  do |f| %>
 	<div class="row">
 		<div class="col-xs-6 text-right">
