--- a/app/views/inquiries/new.html.erb
+++ b/app/views/inquiries/new.html.erb
@@ -1,5 +1,6 @@
 <div class="text-center">
 	<h1 style="color:  #01b8be">問い合わせページ</h1>
+	<p class="notice"><%= flash[:notice] %></p>
 	<%= form_for(@inquiry) do |f| %>
 		<%= f.text_area :request ,:placeholder =>"問い合わせ内容を記述してください",size: "50x5" %><br>
 		<%= f.hidden_field :unsolved %>
