--- a/app/views/topicks/show.html.erb
+++ b/app/views/topicks/show.html.erb
@@ -5,8 +5,8 @@
 		<% end %>
 </div><br>
 <div class="row">
-	<div class="col-xs-8 col-xs-offset-2 well"style="background-color: #fff">
-	<%= @topick.introduction %>
+	<div class="col-xs-8 col-xs-offset-2 well"style="background-color: #e0ffff">
+	<p style="font-size:20px;"><%= @topick.introduction %></p>
 	</div>
 </div>
 <div class="text-right">
