--- a/app/views/admins/inquiries/show.html.erb
+++ b/app/views/admins/inquiries/show.html.erb
@@ -1,14 +1,11 @@
 <h1>回答</h1>
-<%= @inquiry.request %>
-<%= form_for(@inquiry,url:admins_inquiry_path(@inquiry),method: :put) do |e| %>
-<%= e.radio_button :unsolved ,false %>
-<%= label_tag :unsolved, "解決" %>
-<%= e.radio_button :unsolved ,true %>
-<%= label_tag :unsolved, "未解決" %>
-<%= e.submit "変更" %>
-<% end %>
+	<%= @inquiry.request %>
+<div class="inq-edit">
+	<%= render "admins/inquiries/inq_edit",inquiry: @inquiry %>
+</div>
 <%= form_for(@answer,url:admins_answers_path) do |f| %>
 	<%= f.text_area :answer %>
-	<%= f.hidden_field :inquiry_id, {value: @answer.inquiry_id} %>
+	<%= f.hidden_field :inquiry_id %>
 	<%= f.submit "送信" %>
 	<% end %>
+
