--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -75,7 +75,7 @@
 						<%= inquiry.request %>
 					</td>
 					<td>
-						<%= inquiry.answer.answer %>
+						<%= inquiry.answer&.answer %>
 					</td>
 				</tr>
 				<% end %>
