--- a/app/views/comments/destroy.js.erb
+++ b/app/views/comments/destroy.js.erb
@@ -1,2 +1,2 @@
-$("#js-comment").html("<%= j(render 'topicks/topick_comment',topick_comment: @topick_comment) %>");
+$("#js-comments").html("<%= j(render 'topicks/topick_comment',topick_comment: @topick_comment) %>");
 $("textarea").val("");
