--- a/app/views/admins/customers/edit.html.erb
+++ b/app/views/admins/customers/edit.html.erb
@@ -2,38 +2,39 @@
 	<div class="row">
 		<div class="col-xs-8 well">
 			<% if @customer.errors.any? %>
-		<h2 class="text-danger"><%= @customer.errors.count %>つのエラー</h2>
-			<ul class="text-danger">
-				<% @customer.errors.full_messages.each do |message|%>
-				<li><%= message %></li>
-				<%end%>
-			<%end%></ul>
-	<%= form_for(@customer,url:admins_customer_path(@customer)) do |f| %>
-			<span>ID番号:<%= @customer.id %></span>
-			<% if @customer.deleted_at.nil? %>
-				<span>会員</span>
+				<h2 class="text-danger"><%= @customer.errors.count %>つのエラー</h2>
+				<ul class="text-danger">
+					<% @customer.errors.full_messages.each do |message|%>
+					<li><%= message %></li>
+					<%end%>
+				</ul>
+			<%end%>
+			<%= form_for(@customer,url:admins_customer_path(@customer)) do |f| %>
+				<span>ID番号:<%= @customer.id %></span>
+				<% if @customer.deleted_at.nil? %>
+					<span>会員</span>
+				<% else %>
+					<span>退会済</span>
+				<% end %><br>
+				氏名<br><%= f.text_field :name %>
+				ニックネーム<br><%= f.text_field :public_name %><br>
+				email<br><%= f.text_field :email %></p>
+				<p>自己紹介</p>
+				<%=f.text_area :self_introduction %>
+				<p>プロフィールイメージ</p>
+				<%= f.attachment_field :profile_image %>
+				<% if @customer.deleted_at.nil? %>
+				<%= f.radio_button :deleted_at ,true,checked:true %>
+				<%= label_tag :deleted_at, "有効" %>
+				<%= f.radio_button :deleted_at ,false %>
+				<%= label_tag :deleted_at, "退会" %>
 			<% else %>
-				<span>退会済</span>
-			<% end %><br>
-			氏名<br><%= f.text_field :name %></p>
-			ニックネーム<br><%= f.text_field :public_name %><br>
-			email<br><%= f.text_field :email %></p>
-			<p>自己紹介</p>
-			<%=f.text_area :self_introduction %>
-			<p>プロフィールイメージ</p>
-		<%= f.attachment_field :profile_image %>
-		<% if @customer.deleted_at.nil? %>
-		<%= f.radio_button :deleted_at ,true,checked:true %>
-		<%= label_tag :deleted_at, "有効" %>
-		<%= f.radio_button :deleted_at ,false %>
-		<%= label_tag :deleted_at, "退会" %>
-		<% else %>
-		<%= f.radio_button :deleted_at, true %>
-		<%= label_tag :deleted_at,"有効" %>
-		<%= f.radio_button :deleted_at, false, checked:true %>
-		<%= label_tag :deleted_at, "退会" %>
-		<% end %>
-		<p><%= f.submit "変更",class:"btn btn-primary" %></p>
+				<%= f.radio_button :deleted_at, true %>
+				<%= label_tag :deleted_at,"有効" %>
+				<%= f.radio_button :deleted_at, false, checked:true %>
+				<%= label_tag :deleted_at, "退会" %>
+				<% end %>
+			<p><%= f.submit "変更",class:"btn btn-primary" %></p>
 		<% end %>
 	</div>
 </div>
