--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -91,7 +91,7 @@ footer {
 	width:100%;
 	background-image: image-url("img/main1.jpg");
 	background-size: cover;
-	background-position: center;
+	background-position-y:80%;
 	margin-bottom:30px;
 }
 .news {
