--- a/app/views/topicks/top.html.erb
+++ b/app/views/topicks/top.html.erb
@@ -4,9 +4,9 @@
 	<%= image_tag "img/main2.jpg" %
 	<%= image_tag "img/main3.jpg" %
 	<%= image_tag "img/main4.jpg" %>
-	<h1 class="toph1">ようこそ</h1>
-	<h4 class="toph2">あなただけのお話聞かせてくれませんか？</h4>
-	<h3><span class="toph3">SukiSp</span><span class="toph4">はあなたのお話を待っています。</span></h3>
+	<h1 class="toph1"><b>ようこそ</b></h1>
+	<h4 class="toph2"><b>あなただけのお話聞かせてくれませんか？</b></h4>
+	<h3><span class="toph3"><b>SukiSp</b></span><span class="toph4">はあなたのお話を待っています。</span></h3>
 </div>
 
 	<div class="big-box" style="background-color: #f0ffff">
