adminページ修正

--- a/app/views/admins/topicks/top.html.erb
+++ b/app/views/admins/topicks/top.html.erb
@@ -1,11 +1,13 @@
 <h1>管理者ページ</h1>
 <div class="text-center">
 	<h4>お問い合わせ</h4>
-	<table class="table">
+</div>
+	<table class=" text-center table table-striped">
 		<thead>
 			<tr>
-				<th>名前</th>
-				<th>内容</th>
+				<th class="text-center">名前</th>
+				<th class="text-center">内容</th>
+				<th class="text-center">ステータス</th>
 			</tr>
 		</thead>
 		<tbody>
